update: work in progress
Update all work that I just made
